i069: enable native guest runtime compilation